// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Posts reducers delete should return the \`DELETE_REGISTER_DATA\` state 1`] = `Object {}`;

exports[`#Posts reducers delete should return the \`DELETE_REGISTER_FAILURE\` state 1`] = `
Object {
  "isLoading": false,
}
`;

exports[`#Posts reducers delete should return the \`FETCH_SEARCH_DATA\` state 1`] = `
Object {
  "error": Object {},
  "isLoading": true,
  "list": Array [],
}
`;

exports[`#Posts reducers delete should return the \`FETCH_SEARCH_SUCCESS\` state 1`] = `
Object {
  "error": Object {},
  "isLoading": false,
  "list": Array [],
}
`;

exports[`#Posts reducers search should return the \`FETCH_SEARCH_DATA\` state 1`] = `
Object {
  "isLoading": true,
}
`;

exports[`#Posts reducers search should return the \`FETCH_SEARCH_FAILURE\` state 1`] = `
Object {
  "isLoading": false,
}
`;

exports[`#Posts reducers search should return the \`RESET_SEARCH_DATA\` state 1`] = `
Object {
  "error": Object {},
  "isLoading": false,
  "list": Array [],
}
`;

exports[`#Posts reducers search should return the initial state by default 1`] = `Array []`;
